Added : Login and Registration View

--- a/SingleSession.BusinessLayer/SingleSession.BusinessLayer.csproj
+++ b/SingleSession.BusinessLayer/SingleSession.BusinessLayer.csproj
@@ -1,7 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SingleSession.DataAccessLayer\SingleSession.DataAccessLayer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Implementation\" />
+    <Folder Include="Interface\" />
+  </ItemGroup>
 
 </Project>
