Added : IOption Pattern To Get Value From appsetting.json

--- a/SingleSessionApp/appsettings.Development.json
+++ b/SingleSessionApp/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConfigurationSettings": {
+    "ConnectionString": "Data Source=DESKTOP-EJ98MQC\\SQLEXPRESS;Initial Catalog=SingleSessionApp;Integrated Security=True"
   }
 }
