--- a/SingleSession.DataAccessLayer/SingleSession.DataAccessLayer.csproj
+++ b/SingleSession.DataAccessLayer/SingleSession.DataAccessLayer.csproj
@@ -5,12 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SingleSession.ModelLayer\SingleSession.ModelLayer.csproj" />
+    <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Interface\" />
-    <Folder Include="Implementation\" />
+    <ProjectReference Include="..\SingleSession.ModelLayer\SingleSession.ModelLayer.csproj" />
   </ItemGroup>
 
 </Project>
